--- a/mapa.html
+++ b/mapa.html
@@ -51,7 +51,8 @@
         </div>
     </nav>
     <main class="page service-page">
-        <section class="clean-block clean-services dark">
+        <iframe src="https://storymaps.arcgis.com/stories/dc8554f73c3548e5b8cc4a84ae6aaca6?header" width="100%" height="500px" frameborder="0" allowfullscreen allow="geolocation"></iframe>
+        <!--<section class="clean-block clean-services dark">
             <div class="container">
                 <div class="block-heading">
                     <h2 class="text-info">El sistema transmedia esta articulado a una serie de mapas</h2>
@@ -87,7 +88,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>-->
     </main>
     <footer class="page-footer dark" style="background: rgb(255,255,255);border-color: #ffffff;border-top-color: rgb(33,;border-right-color: 37,;border-bottom-color: 41);border-left-color: 37,;">
         <footer class="footer-clean">
