--- a/login.html
+++ b/login.html
@@ -25,10 +25,10 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="color: rgb(76,141,205);">
-        <div class="container"><a class="navbar-brand logo" href="#" style="color: #6b4175;"><img src="assets/img/favicon-32x32.png">Ciudad Unida.</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1" style="color: rgba(231,17,17,0.55);"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand logo" href="https://ciudadunida.com" style="color: #6b4175;"><img src="assets/img/favicon-32x32.png">Ciudad Unida.</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1" style="color: rgba(231,17,17,0.55);"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(76, 141, 205);">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html" style="color: #b575bc;">Sistema transmedia</a></li>
+                    <li class="nav-item"><a class="nav-link" href="transmedia.html" style="color: #b575bc;">Sistema transmedia</a></li>
                     <li class="nav-item"><a class="nav-link" href="service-page.html" style="color: rgba(0, 0, 0, 0.55);">MAPA</a></li>
                     <li class="nav-item"><a class="nav-link" href="testimonials.html">EQUIPO</a></li>
                     <li class="nav-item"><a class="nav-link" href="pricing.html">RECURSOS</a></li>
