--- a/mapa.html
+++ b/mapa.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Services - Brand</title>
+    <title>Mapa - Ciudad Unida</title>
     <meta property="og:image" content="https://ciudadunida.com/assets/img/ms-icon-310x310.png">
     <meta name="description" content="Proyecto de extension de la Universidad Nacional en apoyo a la economía informal de Bogotá durante la crisis sanitaria.">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
@@ -38,7 +38,7 @@
         <div class="container"><a class="navbar-brand logo" href="#" style="color: #6b4175;"><img src="assets/img/favicon-32x32.png"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1" style="color: rgba(231,17,17,0.55);"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(76, 141, 205);">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link " href="transmedia.html" >SISTEMA TRANSMEDIA</a></li>
+                    <li class="nav-item"><a class="nav-link " href="transmedia.html" >Sistema Transmedia</a></li>
                     <li class="nav-item"><a class="nav-link active" href="mapa.html">mapa</a></li>
                     <li class="nav-item"><a class="nav-link" href="equipo.html">EQUIPO</a></li>
                     <li class="nav-item"><a class="nav-link" href="recursos.html">RECURSOS</a></li>
@@ -51,7 +51,7 @@
         </div>
     </nav>
     <main class="page service-page">
-        <iframe src="https://storymaps.arcgis.com/stories/dc8554f73c3548e5b8cc4a84ae6aaca6?header" width="100%" height="500px" frameborder="0" allowfullscreen allow="geolocation"></iframe>
+        <iframe src="https://storymaps.arcgis.com/stories/dc8554f73c3548e5b8cc4a84ae6aaca6" width="100%" height="500px" frameborder="0" allowfullscreen allow="geolocation"></iframe>
         <!--<section class="clean-block clean-services dark">
             <div class="container">
                 <div class="block-heading">
