--- a/transparencia.html
+++ b/transparencia.html
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(76, 141, 205);">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="transmedia.html" >SISTEMA TRANSMEDIA</a></li>
-                    <li class="nav-item"><a class="nav-link" href="mapa.html">mapa</a></li>
+                    <li class="nav-item"><a class="nav-link" href="mapa.html">MAPA</a></li>
                     <li class="nav-item"><a class="nav-link" href="equipo.html">EQUIPO</a></li>
                     <li class="nav-item"><a class="nav-link" href="recursos.html">RECURSOS</a></li>
                     <li class="nav-item"><a class="nav-link " href="blog-post-list.html">eventos</a></li>
@@ -41,16 +41,10 @@
         </div>
     </nav>
     <main class="page pricing-table-page">
-        <section class="clean-block clean-pricing dark">
-            <div class="container">
-                <div class="block-heading">
-                    <h2 class="text-info">Legal</h2>
-                    <p>Aqui encontraras nuestra politica de tratamiento de datos, terminos y condiciones.</p>
-                </div>
-                <div class="typeform-widget" data-url="https://form.typeform.com/to/RJgMz687?typeform-medium=embed-snippet" data-transparency="50" data-hide-headers="true" data-hide-footer="true" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-                </div>
-            </div>
-        </section>
+        <!--<div class="typeform-widget" data-url="https://form.typeform.com/to/RJgMz687?typeform-medium=embed-snippet" data-transparency="50" data-hide-headers="true" data-hide-footer="true" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+        -->
+        <iframe src="https://storymaps.arcgis.com/stories/fc8c766c00584a04a1d6156e90e9833e" width="100%" height="500px" frameborder="0" allowfullscreen allow="geolocation"></iframe>
+    </section>
     </main>
     <footer class="page-footer dark" style="background: rgb(255,255,255);border-color: #ffffff;border-top-color: rgb(33,;border-right-color: 37,;border-bottom-color: 41);border-left-color: 37,;">
         <footer class="footer-clean">
