--- a/equipo.html
+++ b/equipo.html
@@ -51,52 +51,7 @@
 </script>
 <!-- termina codigo chat  -->
     <main class="page testimonials">
-        <section class="clean-block clean-testimonials dark">
-            <div class="container">
-                <div class="block-heading">
-                    <h2 class="text-info">Equipo de trabajo</h2>
-                    <p>Ciudad Unida es una red apoyada en diversos roles de la comunidad.Entre ellos se encuentran los voluntarios, los estudiantes de servicio social y el equipo de Ciudad Unida.</p>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="card clean-testimonial-item border-0 rounded-0">
-                            <div class="card-body">
-                                <p class="card-text">Descripcion de perfil.</p>
-                                <h3>Akbar Vargas </h3>
-                                <h4 class="card-title">Geografo</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="card clean-testimonial-item border-0 rounded-0">
-                            <div class="card-body">
-                                <p class="card-text">Perfil </p>
-                                <h3>Kimberly Castro </h3>
-                                <h4 class="card-title">Diseñadora del proyecto</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="card clean-testimonial-item border-0 rounded-0">
-                            <div class="card-body">
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec augue nunc, pretium at augue at, convallis pellentesque ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                <h3>Carolina Cely</h3>
-                                <h4 class="card-title">Programadora</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="card clean-testimonial-item border-0 rounded-0">
-                            <div class="card-body">
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec augue nunc, pretium at augue at, convallis pellentesque ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                <h3>Gabriel Garcia</h3>
-                                <h4 class="card-title">Coordinador del proyecto</h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+        <iframe src="https://storymaps.arcgis.com/stories/3496dc8df85c4b5194e1e2b4e0a18e76" width="100%" height="500px" frameborder="0" allowfullscreen allow="geolocation"></iframe>
     </main>
     <footer class="page-footer dark" style="background: rgb(255,255,255);border-color: #ffffff;border-top-color: rgb(33,;border-right-color: 37,;border-bottom-color: 41);border-left-color: 37,;">
         <footer class="footer-clean">
