--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
                 <div class="row align-items-center">
                    
                 -->
-                <div style="width:90% ; overflow: hidden">
+                <div style="width:90%" ; overflow: hidden">
                     <iframe src="https://storymaps.arcgis.com/stories/1ec5a9545f6048b6a2621898bba85768" width="100%" height="500px" frameborder="0" allowfullscreen allow="geolocation"></iframe> 
                 </div>
 
                 
                     <div class="container">
                         <!--ArcGIS story -->
-                        <h3>Recorrido</h3>
+
                         <!--<iframe src="https://storymaps.arcgis.com/stories/475865bb401f455fbfead0d7a71b2798?cover=false" width="1000" height="800" frameborder="0" allowfullscreen allow="geolocation"></iframe>-->
 <!--
                         <iframe src="https://storymaps.arcgis.com/stories/475865bb401f455fbfead0d7a71b2798?cover=false" width="100%" height="500px" frameborder="0" allowfullscreen allow="geolocation"></iframe>
