--- a/equipo.html
+++ b/equipo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Testimonials - Brand</title>
+    <title>Equipo - Ciudad Unida </title>
     <meta property="og:image" content="https://ciudadunida.com/assets/img/ms-icon-310x310.png">
     <meta name="description" content="Proyecto de extension de la Universidad Nacional en apoyo a la economía informal de Bogotá durante la crisis sanitaria.">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
@@ -51,7 +51,7 @@
 </script>
 <!-- termina codigo chat  -->
     <main class="page testimonials">
-        <iframe src="https://storymaps.arcgis.com/stories/3496dc8df85c4b5194e1e2b4e0a18e76" width="100%" height="500px" frameborder="0" allowfullscreen allow="geolocation"></iframe>
+        <iframe src="https://storymaps.arcgis.com/stories/3496dc8df85c4b5194e1e2b4e0a18e76" width="100%" height="800px" frameborder="0" allowfullscreen allow="geolocation" scrolling="no"></iframe>
     </main>
     <footer class="page-footer dark" style="background: rgb(255,255,255);border-color: #ffffff;border-top-color: rgb(33,;border-right-color: 37,;border-bottom-color: 41);border-left-color: 37,;">
         <footer class="footer-clean">
