--- a/transmedia.html
+++ b/transmedia.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title> Transmedia - Ciudad Unida</title>
-    <meta property="og:image" content="https://ciudadunida.com/assets/img/ms-icon-310x310.png">
+    <meta property="og:image" content="https://ciudadunida.com/assets/img/apple-icon-180x180">
     <meta name="description" content="Proyecto de extension de la Universidad Nacional en apoyo a la economía informal de Bogotá durante la crisis sanitaria.">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
