--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <!--Titulo  en nav-->
     <title>Inicio - Ciudad Unida</title>
-    <meta property="og:image" content="https://ciudadunida.com/assets/img/ms-icon-310x310.png">
+    <meta property="og:image" content="https://ciudadunida.com/assets/img/apple-icon-180x180">
    <!--Descripcion que aparece en el buscador-->
     <meta name="description" content="Proyecto de extension de la Universidad Nacional en apoyo a la economía informal de Bogotá durante la crisis sanitaria.">
     <!--Widget accesibilidad-->
