--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(76, 141, 205);">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="transmedia.html">SISTEMA TRANSMEDIA</a></li>
-                    <li class="nav-item"><a class="nav-link" href="mapa.html">mapa</a></li>
+                    <li class="nav-item"><a class="nav-link" href="mapa.html">MAPA</a></li>
                     <li class="nav-item"><a class="nav-link" href="equipo.html">EQUIPO</a></li>
                     <li class="nav-item"><a class="nav-link" href="recursos.html">RECURSOS</a></li>
                     <li class="nav-item"><a class="nav-link" href="blog-post-list.html">EVENTOS</a></li>
