--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   </noscript>
   <!--Terminawidget accesibilidad-->
     <!--Link favicon responsive-->
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="180x180" href="assets/img/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/apple-icon-precomposed.png">
-    <link rel="icon" type="image/png" sizes="310x310" href="assets/img/ms-icon-310x310.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/imgs/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/imgs/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="180x180" href="assets/imgs/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/imgs/apple-icon-precomposed.png">
+    <link rel="icon" type="image/png" sizes="310x310" href="assets/imgs/ms-icon-310x310.png">
     <!--Link archivos CSS-->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
@@ -38,6 +38,8 @@
 </head>
 <!-- se puede agregar a la navegacion style="color: #b575bc;";" -->
 <body style="font-family: 'Ancizar Sans';">
+    <!--Inicia Chat TYPEFORM-->
+    <div data-tf-chat data-tf-custom-icon="https://images.typeform.com/images/ZdEuji6FYxJV" data-tf-tooltip="Hola 👋&nbsp;&nbsp;en qué puedo ayudarte?" data-tf-popover="lvS19iER" data-tf-button-color="#EAD7F7"></div><script src="//embed.typeform.com/next/embed.js"></script>
 <!--Chat Customerly-->
 
 <!-- <script>
@@ -51,7 +53,7 @@
 
 <!--Barra de navegacion--> 
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="color: rgb(76,141,205);">
-        <div class="container"><a class="navbar-brand logo" href="#" style="color: #6b4175;"><img src="assets/img/favicon-32x32.png"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1" style="color: rgba(231,17,17,0.55);"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand logo" href="#" style="color: #6b4175;"><img src="assets/imgs/favicon-32x32.png"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1" style="color: rgba(231,17,17,0.55);"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(76, 141, 205);">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="transmedia.html">SISTEMA TRANSMEDIA</a></li>
@@ -91,9 +93,6 @@
                 <div class="row align-items-center">
                    
                 -->
-                <div style="width:90%" ; overflow: hidden">
-                    <iframe src="https://storymaps.arcgis.com/stories/1ec5a9545f6048b6a2621898bba85768" width="100%" height="500px" frameborder="0" allowfullscreen allow="geolocation"></iframe> 
-                </div>
 
                 
                     <div class="container">
@@ -166,6 +165,8 @@
             </div>
         </section>
         -->
+<!--         <div style="width:90%" ; overflow: hidden"> -->
+    <iframe src="https://storymaps.arcgis.com/stories/1ec5a9545f6048b6a2621898bba85768?header" width="100%" height="500px" frameborder="0" allowfullscreen allow="geolocation"></iframe><!--         </div> -->
     </main>
     <!--Comienza pie de pagina-->
     <footer class="page-footer dark" style="background: rgb(255,255,255);border-color: #ffffff;border-top-color: rgb(33,;border-right-color: 37,;border-bottom-color: 41);border-left-color: 37,;">
