--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <!--Widget accesibilidad-->
     <script>(function(d){var s = d.createElement("script");s.setAttribute("data-account", "OtYqgtFT62");s.setAttribute("src", "https://accessibilityserver.org/widget.js");(d.body || d.head).appendChild(s);})(document)</script><noscript>Please ensure Javascript is enabled for purposes of <a href="https://accessibilityserver.org">website accessibility</a></noscript>
   <noscript>
-  Please ensure Javascript is enabled for purposes of 
-  <a href="https://userway.org">website accessibility</a>
+  Por favor activar javascript en su navegador para usar las opciones de accesibilidad web.
   </noscript>
   <!--Terminawidget accesibilidad-->
     <!--Link favicon responsive-->
