--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <meta name="description" content="Proyecto de extension de la Universidad Nacional en apoyo a la economía informal de Bogotá durante la crisis sanitaria.">
     <!--Widget accesibilidad-->
     <script>(function(d){var s = d.createElement("script");s.setAttribute("data-account", "OtYqgtFT62");s.setAttribute("src", "https://accessibilityserver.org/widget.js");(d.body || d.head).appendChild(s);})(document)</script><noscript>Please ensure Javascript is enabled for purposes of <a href="https://accessibilityserver.org">website accessibility</a></noscript>
-  <noscript>
-  Por favor activar javascript en su navegador para usar las opciones de accesibilidad web.
-  </noscript>
-  <!--Terminawidget accesibilidad-->
+    <noscript>
+    Para visualizar las opciones de accesibilidad activar JavaScript en su navegador.
+    </noscript>
+  <!--Termina widget accesibilidad-->
     <!--Link favicon responsive-->
     <link rel="icon" type="image/png" sizes="16x16" href="assets/imgs/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/imgs/favicon-32x32.png">
