--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <!--Titulo  en nav-->
-    <title>Inicio - Ciudad Unida</title>
+    <title>Bienvenida - Ciudad Unida</title>
     <meta property="og:image" content="assets/img/apple-icon-180x180">
    <!--Descripcion que aparece en el buscador-->
     <meta name="description" content="Proyecto de extension de la Universidad Nacional en apoyo a la economía informal de Bogotá durante la crisis sanitaria.">
